--- a/config/config.dist
+++ b/config/config.dist
@@ -3,7 +3,7 @@
  * It's a config file for Watermail
  */
 
-define('DEVELOPMENT_ENVIRONMENT', true);
+define('DEVELOPMENT_ENVIRONMENT', false);
 
 define('DB_NAME', 'watermail');
 define('DB_USER', 'user');
